# amplifier-bundle-macos-screencapture

./: README.md  bundle.md
agents/: screen-observer.md
behaviors/: macos-screencapture.yaml
context/: screencapture-awareness.md
modules/tool-macos-screencapture/: pyproject.toml
modules/tool-macos-screencapture/amplifier_module_tool_macos_screencapture/: __init__.py
modules/tool-macos-screencapture/tests/: test_mount.py
